<resources>
    <string name="app_name">UpFit Coaching</string>
    <string name="mail_label">Email</string>
    <string name="passwd_label">Mot de passe</string>
    <string name="passwd_label_input">Mot de passe (8 caractères minimum)</string>
    <string name="passwd_label_opt">Mot de passe (optionnel)</string>
    <string name="passwd_confirmation">Confirmation du mot de passe</string>
    <string name="sign_in">Connexion</string>
    <string name="sign_up">Inscription</string>
    <string name="user">Utilisateur</string>
    <string name="coach">Coach</string>
    <string name="connection_success">Connection réussie</string>
    <string name="no_connection">Aucune connection internet détectée</string>
    <string name="no_type_defined">Veuillez préciser le type d\'utilisateur</string>
    <string name="missing_fields">Champs manquants !</string>
    <string name="wrong_credentials">Mauvais email/mot de passe !</string>
    <string name="already_exists">Un compte est déjà relié à ce mail</string>
    <string name="error">Veuillez réessayer plus tard</string>
    <string name="user_type">Type de compte : </string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom de famille</string>
    <string name="birthDate">Date de naissance</string>
    <string name="address">Adresse</string>
    <string name="city">Ville</string>
    <string name="phoneNumber">Numéro de téléphone</string>
    <string name="account_creation">Créer le compte</string>
    <string name="woman">Femme</string>
    <string name="man">Homme</string>
    <string name="user_choice">Je suis un client</string>
    <string name="coach_choice">Je suis un coach</string>
    <string name="exit">Quitter</string>
    <string name="exit_application">Souhaitez-vous quitter l\'application ?</string>
    <string name="exit_register">Souhaitez-vous quitter le formulaire d\'inscription ?</string>
    <string name="profile">Profil</string>
    <string name="disconnect">Déconnexion</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="next">Suivant</string>
    <string name="send_message">Envoyer un message</string>

    <string name="connection_progress">Connexion en cours...</string>
    <string name="account_creation_progress">Création du compte en cours...</string>
    <string name="account_done">Compte créé !</string>
    <string name="tap_twice">Veuillez appuyer une seconde fois pour quitter</string>

    <string name="check_birthdate">Votre date de naissance est supérieure à la date actuelle</string>
    <string name="check_age">Vous devez avoir entre 18 et 100 ans pour utiliser cette application</string>
    <string name="check_phoneNumber">Le format du numéro de téléphone est invalide</string>

    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_followUp">Suivi</string>
    <string name="title_prescription">Programme</string>
    <string name="title_calendar">Calendrier</string>
    <string name="title_tips">Astuces</string>
    <string name="title_users">Clients</string>
    <string name="title_chat">Message</string>
    <string name="title_forum">Forum</string>
    <string name="title_activity_coach_main">CoachMainActivity</string>

    <string name="create_thread">Création d\'un sujet</string>
    <string name="thread_title">Nom du sujet</string>
    <string name="thread_message">Corps du sujet</string>
    <string name="send_thread">Confirmer</string>
    <string name="last_message">Dernier message le %1$s, à %2$s par %3$s</string>

    <string name="time">Le %1$s</string>
    <string name="duration">De %1$s à %2$s</string>
    <string name="location">Adresse : </string>
    <string name="event_location">Adresse : %1$s - %2$s</string>
    <string name="no_data_available">Pas d\'évènement pour le moment ! </string>
    <string name="create_event">Création d\'un évènement</string>
    <string name="event_title">Nom de l\'évènement</string>
    <string name="start_date">Début : </string>
    <string name="end_date">Fin : </string>
    <string name="event_type_label">Type :</string>
    <string-array name="event_type">
        <item>Bilan</item>
        <item>Session</item>
    </string-array>
    <string name="edit_event">Modifier l\'évènement</string>
    <string name="cancel_event">Annuler l\'évènement</string>

    <string name="global">Tout</string>
    <string name="year">Année</string>
    <string name="month">Mois</string>

    <string name="weight">Poids</string>
    <string name="index">Indices corporels</string>
    <string name="measures">Mensurations</string>
    <string name="create_measurement">Ajout d\'une mesure</string>
    <string name="weightValue">Poids actuel : %1$skg</string>
    <string name="bmi">IMC actuel : %1$s</string>
    <string name="bfp">IMG actuel : %1$s</string>
    <string name="hip">Tour de hanche : %1$s</string>
    <string name="waist">Tour de ventre : %1$s</string>
    <string name="thigh">Tour de cuisse : %1$s</string>
    <string name="arm">Tour de bras : %1$s</string>

    <string name="weight_withoutInput">Poids (en kg)</string>
    <string name="height_withoutInput">Taille (en cm)</string>
    <string name="hip_withoutInput">Tour de hanche (en cm)</string>
    <string name="waist_withoutInput">Tour de ventre (en cm)</string>
    <string name="thigh_withoutInput">Tour de cuisse (en cm)</string>
    <string name="arm_withoutInput">Tour de bras (en cm)</string>

    <string name="edit_profile">Mettre à jour le profil</string>
    <string name="check_coach">Voir le profil du coach</string>
    <string name="coach_profile">Profil du Coach</string>
    <string name="librairies">Librairies utilisées</string>
    <string name="settings">Réglages</string>

    <string name="coach_firstName">Prénom : %1$s</string>
    <string name="coach_lastName">Nom : %1$s</string>
    <string name="coach_mail">Mail : %1$s</string>
    <string name="coach_tel">Tel : %1$s</string>

    <string name="call">Appeler</string>
    <string name="mail">Mail</string>
    <string name="appraisal">Bilan</string>
    <string name="goal">Objectif : %1$s</string>
    <string name="rep">%1$s séance(s) par semaine</string>
    <string name="new_appraisal">Nouvelle fiche bilan</string>
    <string name="display_appraisal">Mettre à jour la fiche bilan</string>
    <string name="display_followUp">Consulter le suivi</string>
    <string name="test">Dernier test</string>
    <string name="test_speed">Vitesse d\'échauffement : %1$s km/h</string>
    <string name="test_freq">Fréquence : %1$ss</string>
    <string name="new_test">Nouveau test</string>
    <string name="new_prescription">Nouvelle prescription</string>
    <string name="no_prescription">Pas de prescription pour le moment !</string>
    <string name="confirm_prescription">Valider la prescription</string>
    <string name="edit_exercise">Modifier l\'exercice</string>
    <string name="remove_exercise">Supprimer l\'exercice</string>

    <string name="time_exercise">Durée : %1$s</string>
    <string name="serie_exercise">Nombre de séries : %1$d</string>
    <string name="rep_exercise">Nombre de répétitions : %1$d</string>
    <string name="intensity_exercise">Intensité : %1$s</string>
    <string name="intensity">Intensité : </string>
    <string name="timer">Durée : </string>
    <string name="default_timer">00:00:00</string>
    <string name="serie_input">Séries</string>
    <string name="repet_input">Répétitions</string>

    <string name="create_exercise">Création d\'un exercice</string>

    <string name="goal_input">Objectif</string>
    <string name="rep_input">Nombre de séances par semaine</string>
    <string name="contraindication_input">Contre-indication (optionnel)</string>
    <string name="sportAntecedent_input">Antécédents sportifs (optionnel)</string>
    <string name="help_input">Aide nécessaire ?</string>
    <string name="nutritionist_input">Suivi nutritionnel ?</string>
    <string name="comment_input">Commentaires (optionnel)</string>

    <string name="vVO2max">VAM</string>
    <string name="flexibility">Souplesse</string>


    <string name="speed_input">Echauffement (km/h)</string>
    <string name="start_speed_input">Vitesse de début (km/h)</string>
    <string name="increase_input">Augmentation (km/h)</string>
    <string name="freq_input">Fréquence (s)</string>

    <string name="knee_input">Genoux</string>
    <string name="shin_input">Mi-Tibia</string>
    <string name="kick_input">Coup de pied</string>
    <string name="closedFist_input">Sol poing fermé</string>
    <string name="handFlat_input">Sol main à plat</string>


    <string name="butterknife_label">Butterknife</string>
    <string name="butterknife_url">https://github.com/JakeWharton/butterknife</string>
    <string name="material_label">Material-calendarview</string>
    <string name="material_url">https://github.com/prolificinteractive/material-calendarview</string>
    <string name="mp_label">MPAndroidChart</string>
    <string name="mp_url">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="retrofit_label">Retrofit</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="joda_label">Joda time android</string>
    <string name="joda_url">https://github.com/dlew/joda-time-android</string>
    <string name="realm_label">Realm</string>
    <string name="realm_url">https://github.com/realm/realm-java</string>
    <string name="jwt_label">JWTDecode.Android</string>
    <string name="jwt_url">https://github.com/auth0/JWTDecode.Android</string>
    <string name="firebase_label">Firebase</string>
    <string name="firebase_url">https://firebase.google.com/docs/cloud-messaging/android/client</string>

    <string-array name="user_type">
        <item>Gratuit</item>
        <item>Payant</item>
    </string-array>

    <string-array name="intensity">
        <item>Faible</item>
        <item>Moyenne</item>
        <item>Bonne</item>
        <item>Très bonne</item>
    </string-array>

    <string-array name="exercice">
        <item>Abdominaux</item>
        <item>Footing</item>
        <item>Natation</item>
        <item>Pompes</item>
        <item>Squats</item>
        <item>Vélo</item>
    </string-array>

    <string name="title_activity_test">TEST</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>
