<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_followUp"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/title_followUp" />

    <item
        android:id="@+id/navigation_prescription"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/title_prescription" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_event_available_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_forum" />

</menu>
