<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorPrimary"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:orientation="vertical">
    
    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/title"
        android:layout_marginTop="30dp"
        android:text="@string/librairies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/butterknife_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/butterknife_label"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/firebase_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/firebase_label"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/joda_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/joda_label"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/jwt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/jwt_label"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/material_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/material_label"/>


    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/MPAndroid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/mp_label"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/realm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/realm_label"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/retrofit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/retrofit_label"/>

</LinearLayout>