<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/create_exercise"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_type_label"
            android:textColor="@color/colorWhite"/>
        <Spinner
            android:id="@+id/spinner"
            android:theme="@style/customSpinner"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intensity"
            android:textColor="@color/colorWhite"/>
        <Spinner
            android:id="@+id/spinnerIntensity"
            android:entries="@array/intensity"
            android:theme="@style/customSpinner"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/timer"
            android:textSize="12sp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/default_timer"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/repInput"
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/rep"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repet_input"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/serieInput"
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/serie"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serie_input"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_thread"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold" />

</LinearLayout>