<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/firstName"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:textColor="@color/colorWhite"
            android:singleLine="true"
            android:nextFocusDown="@id/lastName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/lastName"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:textColor="@color/colorWhite"
            android:singleLine="true"
            android:nextFocusDown="@id/birthDate"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/womanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/woman"/>

        <CheckBox
            android:theme="@style/AppThemeCustom"
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/birthDate"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/manLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/man"/>

        <CheckBox
            android:theme="@style/AppThemeCustom"
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/birthDate"/>

    </LinearLayout>

    <TextView
        android:id="@+id/birthDate"
        android:hint="@string/birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/city"
            android:textColor="@color/colorWhite"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:singleLine="true"
            android:nextFocusDown="@id/phoneNumber" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/AppThemeCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/phoneNumber"
            android:textColor="@color/colorWhite"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:singleLine="true"
            android:nextFocusDown="@id/account_creation" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/account_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/account_creation"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:elevation="4dp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>