<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/create_thread"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/AppThemeCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/thread_title"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/thread_title"
                android:textColor="@color/colorWhite"
                android:inputType="text"
                android:maxLength="60"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/AppThemeCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/content"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/thread_message"
                android:textColor="@color/colorWhite"
                android:maxLines="4"
                android:maxLength="300"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_thread"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold" />

</LinearLayout>